# ffxiv-cactpot-solver

./: Cargo.toml  README.md  launch
.github/workflows/: release.yml  test.yml
core/: Cargo.toml
core/src/: board.rs  board_position.rs  end_board.rs  end_row.rs  lib.rs  parsed_board.rs  payouts.rs  public_api.rs  recommendation.rs
core/src/board/: available_selection_iter.rs  fill_failure.rs
core/src/board_position/: valued_board_position.rs
src/: app.rs
src/app/: grid.rs  grid_btn.rs  grid_cell.rs  state.rs
