[package]
name = "cactpot_solver"
version = "0.1.0"
authors = ["Arturas <a.molcanovas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "core"
]

[profile.release]
codegen-units = 1
incremental = true

[profile.release.build-override]
codegen-units = 1
incremental = true

[dependencies]
eframe = "^0.11.0"
image = "^0.23.14"
cactpot_solver_core = { path = "core" }
